# Qtftp

./: .gitignore  AUTHORS  CMakeLists.txt  conanfile.py  readme.md
cmake/: FindSystemd.cmake
doc/: CMakeLists.txt  how_to_build.txt
doc/doxygen/: CMakeLists.txt  btdoxygen.in
lib/: CMakeLists.txt
lib/include/: abstractsocket.h  readsession.h  session.h  tftp_constants.h  tftp_error.h  tftp_utils.h  tftpserver.h  udpsocket.h  udpsocketfactory.h
lib/include/qtftp/: readsession.h  session.h  tftp_utils.h  tftpserver.h  udpsocket.h  udpsocketfactory.h
lib/src/: abstractsocket.cpp  readsession.cpp  session.cpp  tftp_error.cpp  tftp_utils.cpp  tftpserver.cpp  udpsocket.cpp  udpsocketfactory.cpp
qtftpd/: CMakeLists.txt
qtftpd/config/: qtftpd.conf  qtftpd.service
qtftpd/src/: main.cpp
test/: CMakeLists.txt
test/proofofconcept/: CMakeLists.txt
test/proofofconcept/qt_tftpd/: CMakeLists.txt
test/proofofconcept/qt_tftpd/src/: main.cpp
test/proofofconcept/qtftpd/: CMakeLists.txt
test/proofofconcept/qtftpd/src/: main.cpp
test/unit/: CMakeLists.txt
test/unit/classes/: CMakeLists.txt  readsession_ut.cpp  readsession_ut.cpp.gtest  tftpserver_ut.cpp
test/unit/stubs/: CMakeLists.txt
test/unit/stubs/include/: simulatednetworkstream.h  udpsocketstub.h  udpsocketstubfactory.h
test/unit/stubs/src/: simulatednetworkstream.cpp  udpsocketstub.cpp  udpsocketstubfactory.cpp
test/unit/test_files/: 1024_byte_file.txt  16_byte_file.txt  600_byte_file.txt  CMakeLists.txt  different_line_endings.txt  different_line_endings_2blocks.txt  different_line_endings_2blocks_asciitransfer_block1_expected.txt  different_line_endings_2blocks_asciitransfer_block2_expected.txt  no_permission.txt
test_package/: CMakeLists.txt  conanfile.py  example.cpp
